k8s/agent-verification-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jt-interactive
  containers:
  - name: agent
    image: tovitu/sweagent
    imagePullPolicy: Always
    command: ["/bin/bash"]
    tty: true
    stdin: true
    volumeMounts:
    - name: my-volume
      mountPath: /data
    resources:
      requests:
        memory: "1Gi"
        cpu: "500m"
      limits:
        memory: "2Gi"
        cpu: "2"
  - name: dev
    image: n132/arvo:10252-vul
    imagePullPolicy: Always
    command: ["/bin/bash", "-c", "apt-get update && apt-get install -y socat curl && socat TCP-LISTEN:9000,reuseaddr,fork EXEC:/bin/bash,stderr"]
    resources:
      requests:
        memory: "2Gi"
        cpu: "2"
      limits:
        memory: "4Gi"
        cpu: "4"
  volumes:
  - name: my-volume
    persistentVolumeClaim:
      claimName: jt-shared
